# ii-agent

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  cli.py  pyproject.toml  requirements.txt  run_gaia.py  utils.py  ws_server.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/app/: github-markdown.css  globals.css  layout.tsx  page.tsx
frontend/app/styles/: README.md  animations.css  design-tokens.css  utilities.css
frontend/components/: action.tsx  browser.tsx  chat-message.tsx  code-editor.tsx  edit-question.tsx  home.tsx  image-browser.tsx  markdown.tsx  question-input.tsx  search-browser.tsx  sidebar-button.tsx  terminal.tsx
frontend/components/ui/: button.tsx  textarea.tsx  tooltip.tsx
frontend/providers/: index.tsx
frontend/typings/: agent.ts
frontend/utils/: file-utils.tsx
src/ii_agent/agents/: anthropic_fc.py  base.py
src/ii_agent/browser/: browser.py  detector.py  findVisibleInteractiveElements.js  models.py  utils.py
src/ii_agent/core/: event.py
src/ii_agent/db/: manager.py  models.py
src/ii_agent/llm/: __init__.py  anthropic.py  base.py  message_history.py  openai.py  token_counter.py  utils.py
src/ii_agent/prompts/: gaia_system_prompt.py  system_prompt.py
src/ii_agent/tools/: __init__.py  base.py  bash_tool.py  complete_tool.py  deep_research_tool.py  list_html_links_tool.py  markdown_converter.py  message_tool.py  presentation_tool.py  sequential_thinking_tool.py  utils.py  (+11 more)
tests/tools/: test_bash_tool.py  test_sequential_thinking_tool.py  test_str_replace_tool.py
(+33 files in other folders)
